--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,24 @@
 services:
   postgres:
     image: postgres:15-alpine
-    container_name: project_name_postgres
+    container_name: ${PROJECT_NAME:-project_name}_postgres
     environment:
-      POSTGRES_DB: project_name_db
-      POSTGRES_USER: project_name_user
-      POSTGRES_PASSWORD: project_name_pass
+      POSTGRES_DB: ${POSTGRES_DB:-${PROJECT_NAME:-project_name}_db}
+      POSTGRES_USER: ${POSTGRES_USER:-${PROJECT_NAME:-project_name}_user}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-${PROJECT_NAME:-project_name}_pass}
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U project_name_user -d project_name_db"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-${PROJECT_NAME:-project_name}_user} -d ${POSTGRES_DB:-${PROJECT_NAME:-project_name}_db}"]
       interval: 10s
       timeout: 5s
       retries: 5
 
   redis:
     image: redis:7-alpine
-    container_name: project_name_redis
+    container_name: ${PROJECT_NAME:-project_name}_redis
     ports:
       - "6379:6379"
     volumes:
@@ -31,13 +31,13 @@ services:
 
   web:
     build: .
-    container_name: project_name_web
+    container_name: ${PROJECT_NAME:-project_name}_web
     ports:
       - "8000:8000"
     volumes:
       - .:/app
     environment:
-      - DATABASE_URL=postgresql://project_name_user:project_name_pass@postgres:5432/project_name_db
+      - DATABASE_URL=postgresql://${POSTGRES_USER:-${PROJECT_NAME:-project_name}_user}:${POSTGRES_PASSWORD:-${PROJECT_NAME:-project_name}_pass}@postgres:5432/${POSTGRES_DB:-${PROJECT_NAME:-project_name}_db}
     depends_on:
       postgres:
         condition: service_healthy
