--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,11 @@
+asgiref
 django
+django-cors-headers
+djangorestframework
+djangorestframework-simplejwt
+PyJWT
+pytz
+sqlparse
+psycopg2-binary
+python-dotenv
 django-debug-toolbar
